# DirDiffer

./: .gitignore  CMakeLists.txt  README.md  src.7z
src/: configuration.cpp  configuration.h  differ.cpp  differ.h  dynamic_buffer.h  file.cpp  file.h  filesystem_interface.cpp  filesystem_interface.h  int_defs.h  logger.cpp  logger.h  lowercase_path.cpp  lowercase_path.h  main.cpp  memory.cpp  memory.h  rng.h  sample_config.h  serialization.cpp  serialization.h  smtp.cpp  smtp.h  string_defs.h  string_utils.cpp  string_utils.h  vector_defs.h  winapi_funcs.cpp  winapi_funcs.h
